@@ -1,5 +1,10 @@
 Revision history for OpenTelemetry
 
+{{$NEXT}}
+
+    * Add support for a `details` parameter to the error handler
+      for passing additional structured context data
+
 0.012     2023-11-05 18:29:49+00:00 Europe/London
 
     * Fix the documentation for OpenTelemetry::Common::config, which
